@@ -1,6 +1,8 @@
 26 Aug 2010 Add "midnight" option to maxrates. Sets interval to 1440 and 
             curr_int_start_time to the prior midnight. This will cause 
-            the maxrates stats to print at midnight. - Paul Gorlinsky
+            the maxrates stats to print at midnight. 
+            "impl.c" was modified to set curr_int_start_time to the 
+            previous midnight if the interval is 1440 minutes. - Paul Gorlinsky
 22 Aug 2010 CMPSC-Enhancement Facility with a lot of guessing - Bernard van der Helm
 20 Aug 2010 Interlocked-Access Facility - Roger Bowler
 16 Aug 2010 Deprecate s37x statement. Use "ldmod s37x" instead - Ivan Warren
